--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="index2.html.">انتقال للصفحه 2</a></h1>
+    <h1><a href="index2.html">انتقال للصفحه 2</a></h1>
 </body>
+
 </html>
