--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="index.html.">انتقال للصفحه 1</a></h1>
+    <h1><a href="index.html">انتقال للصفحه 1</a></h1>
 </body>
+
 </html>
